# spektCI

./: .dockerignore  .gitignore  .spektci.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  dogfood.yml  release.yml
docs/: adapters.md  contributing.md  controls.md
src/spektci/: __init__.py  __main__.py
src/spektci/adapters/: __init__.py  base.py  detector.py
src/spektci/adapters/azure/: __init__.py  adapter.py  collector.py  parser.py
src/spektci/adapters/bitbucket/: __init__.py  adapter.py  collector.py  parser.py
src/spektci/adapters/circleci/: __init__.py  adapter.py  collector.py  parser.py
src/spektci/adapters/github/: __init__.py  adapter.py  collector.py  parser.py
src/spektci/adapters/jenkins/: __init__.py  adapter.py  collector.py  parser.py
src/spektci/cli/: analyze.py  config_cmd.py  main.py
src/spektci/config/: defaults.py  loader.py  schema.py
src/spektci/controls/: __init__.py  base.py  branch_protection.py  hardcoded_secrets.py  image_sources.py  image_tags.py  outdated_deps.py  permissions.py  pinned_actions.py  registry.py  required_stages.py
src/spektci/core/: __init__.py  engine.py  models.py  result.py
src/spektci/reporters/: __init__.py  base.py  json_reporter.py  sarif.py  terminal.py
tests/: conftest.py
tests/fixtures/azure/: .gitkeep
tests/fixtures/bitbucket/: .gitkeep
tests/fixtures/circleci/: .gitkeep
tests/fixtures/github/: compliant_workflow.yml  noncompliant_workflow.yml  reusable_workflow.yml
tests/fixtures/jenkins/: .gitkeep
tests/integration/: test_e2e.py
tests/unit/: test_v020_improvements.py
tests/unit/test_adapters/: test_detector.py  test_github_parser.py
tests/unit/test_cli/: test_cli.py
tests/unit/test_config/: test_loader.py
tests/unit/test_controls/: test_hardcoded_secrets.py  test_image_sources.py  test_image_tags.py  test_permissions.py  test_pinned_actions.py  test_required_stages.py
tests/unit/test_core/: test_result.py
tests/unit/test_reporters/: test_factory.py  test_reporters.py
